--- a/examples/example0.html
+++ b/examples/example0.html
@@ -34,7 +34,7 @@ $(document).ready(function(e)
 		var pb;
 		$(document).ready(function(e)
 		{
-			var pb=$("body").playblack();
+			pb=$("body").playblack();
 			pb.load({"audio":"https://archive.org/download/testmp3testfile/mpthreetest.mp3"});
 		});
 	</script>
