--- a/examples/example1.html
+++ b/examples/example1.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <h1>Example1: Audio Formats</h1>
+<input type="button" value="Load" onclick="javascript:load_selection();"></input>
 <p>Not all browsers support all of the above audio file formats.</p>
 <p>The most widely supported format seems to be MP3 (based on random tests, 2018).</p>
 </body>
