--- a/examples/example3.html
+++ b/examples/example3.html
@@ -18,6 +18,7 @@
 <li>Scrolling horizontally should not affect the player in any way</li>
 <li>The players should adapt reasonably to any change of the window size (resize)</li>
 </ul>
+<input type="button" value="load" onclick="javascript:load_players();"></input>
 <input type="button" value="show player1" onclick="javascript:show_player(0);">
 <input type="button" value="show player2" onclick="javascript:show_player(1);">
 <input type="button" value="show player3" onclick="javascript:show_player(2);">
