--- a/examples/example4.html
+++ b/examples/example4.html
@@ -15,6 +15,7 @@
 <ul>
 <li>Ping-pong play two tracks using on_end() callback</li>
 </ul>
+<input type="button" value="load" onclick="javascript:load_player();"></input>
 <div class="code"><xmp>
 pb.on_end(function(obj) { //obj is reference to playblack
 	//pb.load(...);
