--- a/examples/index.html
+++ b/examples/index.html
@@ -12,6 +12,8 @@
 <li><a href="example2.html">example2.html</a></li>
 <li><a href="example3.html">example3.html</a></li>
 <li><a href="example4.html">example4.html</a></li>
+<li><a href="#">example5.html</a></li>
+<li><a href="example6.html">example6.html</a></li>
 </ul>
 </body>
 </html>
